Filled missing values with the mean for specific columns

--- a/notebook/RandomForest_casestudy_covid19.ipynb
+++ b/notebook/RandomForest_casestudy_covid19.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -328,7 +328,7 @@
        "4           NaN  released  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -526,7 +526,7 @@
        "Name: state, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -566,7 +566,7 @@
        "Name: n_age, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -709,7 +709,7 @@
        "Name: disease, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,14 +732,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "zQdarDx_SpNz"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = ['global_num','birth_year','infection_order','infected_by','contact_number']\n",
+    "for column in columns:\n",
+    "    df[column].fillna(df[column].mean(), inplace = True)\n",
+    "    \n",
+    "df.contact_number.isnull().sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -753,14 +770,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ATJ84cdDSpN2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.128954      1807\n",
+       "0.000000         47\n",
+       "2.000000         44\n",
+       "3.000000         42\n",
+       "1.000000         34\n",
+       "               ... \n",
+       "117.000000        1\n",
+       "1160.000000       1\n",
+       "84.000000         1\n",
+       "174.000000        1\n",
+       "75.000000         1\n",
+       "Name: contact_number, Length: 73, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.contact_number.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
