--- a/notebook/RandomForest_casestudy_covid19.ipynb
+++ b/notebook/RandomForest_casestudy_covid19.ipynb
@@ -770,37 +770,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ATJ84cdDSpN2"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24.128954      1807\n",
-       "0.000000         47\n",
-       "2.000000         44\n",
-       "3.000000         42\n",
-       "1.000000         34\n",
-       "               ... \n",
-       "117.000000        1\n",
-       "1160.000000       1\n",
-       "84.000000         1\n",
-       "174.000000        1\n",
-       "75.000000         1\n",
-       "Name: contact_number, Length: 73, dtype: int64"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.contact_number.value_counts()"
+    "df = df.apply(lambda x: x.fillna(0) if x.dtype.kind in 'biufc' else x.fillna('-'))"
    ]
   },
   {
@@ -815,24 +793,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "82lVA3vUSpN5"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_id            0\n",
+       "global_num            0\n",
+       "sex                   0\n",
+       "birth_year            0\n",
+       "age                   0\n",
+       "country               0\n",
+       "province              0\n",
+       "city                  0\n",
+       "disease               0\n",
+       "infection_case        0\n",
+       "infection_order       0\n",
+       "infected_by           0\n",
+       "contact_number        0\n",
+       "symptom_onset_date    0\n",
+       "confirmed_date        0\n",
+       "released_date         0\n",
+       "deceased_date         0\n",
+       "state                 0\n",
+       "n_age                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "55CJRFKtSpN7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>global_num</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>infection_case</th>\n",
+       "      <th>infection_order</th>\n",
+       "      <th>infected_by</th>\n",
+       "      <th>contact_number</th>\n",
+       "      <th>symptom_onset_date</th>\n",
+       "      <th>confirmed_date</th>\n",
+       "      <th>released_date</th>\n",
+       "      <th>deceased_date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>n_age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000000001</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Gangseo-gu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.600789e+09</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>2020-02-05</td>\n",
+       "      <td>-</td>\n",
+       "      <td>released</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000000002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jungnang-gu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.600789e+09</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>-</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>-</td>\n",
+       "      <td>released</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000003</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jongno-gu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>contact with patient</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.002000e+09</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>-</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-02-19</td>\n",
+       "      <td>-</td>\n",
+       "      <td>released</td>\n",
+       "      <td>56.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000000004</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Mapo-gu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>overseas inflow</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.600789e+09</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2020-01-26</td>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>2020-02-15</td>\n",
+       "      <td>-</td>\n",
+       "      <td>released</td>\n",
+       "      <td>29.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000000005</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Seongbuk-gu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>contact with patient</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>-</td>\n",
+       "      <td>released</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   patient_id  global_num     sex  birth_year  age country province  \\\n",
+       "0  1000000001         2.0    male      1964.0  50s   Korea    Seoul   \n",
+       "1  1000000002         5.0    male      1987.0  30s   Korea    Seoul   \n",
+       "2  1000000003         6.0    male      1964.0  50s   Korea    Seoul   \n",
+       "3  1000000004         7.0    male      1991.0  20s   Korea    Seoul   \n",
+       "4  1000000005         9.0  female      1992.0  20s   Korea    Seoul   \n",
+       "\n",
+       "          city  disease        infection_case  infection_order   infected_by  \\\n",
+       "0   Gangseo-gu        0       overseas inflow              1.0  2.600789e+09   \n",
+       "1  Jungnang-gu        0       overseas inflow              1.0  2.600789e+09   \n",
+       "2    Jongno-gu        0  contact with patient              2.0  2.002000e+09   \n",
+       "3      Mapo-gu        0       overseas inflow              1.0  2.600789e+09   \n",
+       "4  Seongbuk-gu        0  contact with patient              2.0  1.000000e+09   \n",
+       "\n",
+       "   contact_number symptom_onset_date confirmed_date released_date  \\\n",
+       "0            75.0         2020-01-22     2020-01-23    2020-02-05   \n",
+       "1            31.0                  -     2020-01-30    2020-03-02   \n",
+       "2            17.0                  -     2020-01-30    2020-02-19   \n",
+       "3             9.0         2020-01-26     2020-01-30    2020-02-15   \n",
+       "4             2.0                  -     2020-01-31    2020-02-24   \n",
+       "\n",
+       "  deceased_date     state  n_age  \n",
+       "0             -  released   56.0  \n",
+       "1             -  released   33.0  \n",
+       "2             -  released   56.0  \n",
+       "3             -  released   29.0  \n",
+       "4             -  released   28.0  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
