--- a/notebook/RandomForest_casestudy_covid19.ipynb
+++ b/notebook/RandomForest_casestudy_covid19.ipynb
@@ -1604,37 +1604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 137,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['patient_id', 'global_num', 'birth_year', 'disease', 'infection_order',\n",
-       "       'infected_by', 'contact_number', 'n_age', 'sex_female', 'sex_male',\n",
-       "       ...\n",
-       "       'infection_case_Shincheonji Church',\n",
-       "       'infection_case_Suyeong-gu Kindergarten',\n",
-       "       'infection_case_contact with patient', 'infection_case_etc',\n",
-       "       'infection_case_gym facility in Cheonan',\n",
-       "       'infection_case_gym facility in Sejong',\n",
-       "       'infection_case_overseas inflow', 'state_deceased', 'state_isolated',\n",
-       "       'state_released'],\n",
-       "      dtype='object', length=195)"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_rf = pd.get_dummies(df)\n",
-    "#cleaning up the categorical columns that contained '-' that replaced NaN\n",
-    "df_cat = df.select_dtypes(include=['object']).columns + '_-'\n",
-    "df_rf.drop(df_rf.loc[:,df_rf.columns.isin(df_cat)].columns, axis = 1, inplace = True)"
+    "df_rf = pd.get_dummies(df)"
    ]
   },
   {
@@ -1645,6 +1621,27 @@
    },
    "source": [
     "### Split the data into test and train subsamples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['state_-', 'state_deceased', 'state_isolated', 'state_released'], dtype='object')"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = df_rf.iloc[:,len(df_rf.columns)-4:]\n",
+    "y.columns"
    ]
   },
   {
@@ -1660,8 +1657,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# dont forget to define your X and y\n",
-    "X = df_rf\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=1)"
+    "X = df_rf.iloc[:,:len(df_rf.columns)-4]\n",
+    "y = df_rf.iloc[:,len(df_rf.columns)-4:]\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=1)"
    ]
   },
   {
